705 Add compiled ctrlo-bootstrap.css

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -2414,6 +2414,21 @@ small.search_term {
   display: none;
 }
 
+.select-widget .form-group button.select-widget-value__delete,
+.select-widget .form-group:hover button.select-widget-value__delete {
+  border: none;
+  margin: 0 -2px 0 8px;
+  background-color: transparent;
+}
+.select-widget .form-group button.select-widget-value__delete:hover,
+.select-widget .form-group:hover button.select-widget-value__delete:hover {
+  background-color: transparent;
+}
+.select-widget .form-group button.select-widget-value__delete:focus,
+.select-widget .form-group:hover button.select-widget-value__delete:focus {
+  outline: 0;
+}
+
 .select-widget .form-control-search {
   border: 0;
   outline: 0;
