--- a/views/edit.tt
+++ b/views/edit.tt
@@ -948,7 +948,7 @@
                     [% checked = editvalue.id_hash.${value.id} %]
                     [% value_id = field _ '_' _ value.id %]
                     <li [% !checked && 'hidden' %] data-list-item="[% value_id %]">
-                        [% value.value | html_entity %]
+                        <span class="widget-value__value">[% value.value | html_entity %]</span>
                         <button class="close select-widget-value__delete" aria-hidden="true" aria-label="delete" title="delete" tabindex="-1">&times;</button>
                     </li>
                 [% END %]
