--- a/views/snippets/record_edit.tt
+++ b/views/snippets/record_edit.tt
@@ -22,14 +22,14 @@
 
 [% IF record.user_can_delete %]
    <!-- Modal -->
-    <div class="modal fade" id="modaldelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="modaldelete" tabindex="-1" role="dialog" aria-labelledby="delete_record_heading" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <form role="form" method="post" enctype="multipart/form-data" action="/record/[% record.current_id %]">
                 <input type="hidden" name="csrf_token" value="[% csrf_token %]">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModalLabel">Delete record</h4>
+                    <h4 class="modal-title" id="delete_record_heading">Delete record</h4>
                 </div>
                 <div class="modal-body">
                     <p>Are you sure you want to delete this record? The version history of the record will
